finish companies part
